# ops-pmd

./: CMakeLists.txt  DESIGN.md  README.md  ft_ct_coverage
include/: plug.h  pm_dom.h  pmd.h.in
ops-tests/component/: pmd_test.md  test_pmd.py
ops-tests/component/files/: SFP_SR_AVAGO.txt  atoc.c
ops-tests/feature/: dom_supporting_xvrs.py  test_ft_dom.py
src/: config.c  ovsdb_access.c  plug.c  pm_detect.c  pm_dom.c  pmd.c
tests/: test_pmd.py
tests/files/: QSFP_CR4_MELLANOX.txt  QSFP_CR4_MOLEX.txt  QSFP_SR4_AVAGO.txt  README  SFP_DAC_MOLEX.txt  sum.c
